<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="view"
            type="com.googry.coinhelper.ui.home.HomeActivity" />

        <variable
            name="coinSortVM"
            type="com.googry.coinhelper.viewmodel.CoinSortViewModel" />

    </data>

    <!--<android.support.v4.widget.DrawerLayout-->
    <!--android:id="@+id/dl_root"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->


    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/supl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        app:umanoAnchorPoint="0.4"
        app:umanoInitialState="hidden"
        app:umanoPanelHeight="0dp"
        app:umanoShadowHeight="4dp">

        <LinearLayout
            android:id="@+id/cl_root"
            style="@style/RootTopViewGroup"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_title"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tv_exchange"
                    style="@style/TitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    tools:text="@string/app_name" />


                <!--<ImageView-->
                <!--android:id="@+id/ic_arrow_forward"-->
                <!--android:layout_width="36dp"-->
                <!--android:layout_height="36dp"-->
                <!--android:layout_marginEnd="8dp"-->
                <!--android:onClick="@{() -> view.onOpenSideMenuClick()}"-->
                <!--android:src="@drawable/ic_action_arrow_forward" />-->
            </LinearLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/tl_content"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                app:tabIndicatorHeight="0dp"
                app:tabMode="scrollable"
                app:tabPadding="2dp"
                app:tabSelectedTextColor="@color/blue4"
                app:tabTextAppearance="@style/TabLayoutTextStyle"
                app:tabTextColor="@color/gray2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:paddingTop="4dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical"
                    android:onClick='@{() ->coinSortVM.onSortClick("currency")}'
                    android:orientation="horizontal"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coin_name"
                        android:textSize="14sp" />

                    <ImageView
                        isSelected="@{coinSortVM.liveIsDescending}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_selector"
                        android:visibility='@{coinSortVM.liveSelectedSortItem.equals("currency") ? View.VISIBLE : View.GONE}' />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:onClick='@{() ->coinSortVM.onSortClick("last")}'
                    android:orientation="horizontal"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/last"
                        android:textSize="14sp" />

                    <ImageView
                        isSelected="@{coinSortVM.liveIsDescending}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_selector"
                        android:visibility='@{coinSortVM.liveSelectedSortItem.equals("last") ? View.VISIBLE : View.GONE}' />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick='@{() ->coinSortVM.onSortClick("diff")}'
                    android:orientation="horizontal"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/trade_diff"
                        android:textSize="14sp" />

                    <ImageView
                        isSelected="@{coinSortVM.liveIsDescending}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_selector"
                        android:visibility='@{coinSortVM.liveSelectedSortItem.equals("diff") ? View.VISIBLE : View.GONE}' />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:onClick='@{() ->coinSortVM.onSortClick("volume")}'
                    android:orientation="horizontal"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/trade_amount"
                        android:textSize="14sp" />

                    <ImageView
                        isSelected="@{coinSortVM.liveIsDescending}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_selector"
                        android:visibility='@{coinSortVM.liveSelectedSortItem.equals("volume") ? View.VISIBLE : View.GONE}' />

                </LinearLayout>


            </LinearLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/supl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">


        </FrameLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>


    <!--<FrameLayout-->
    <!--android:id="@+id/fl_side_right"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="end"-->
    <!--android:layout_marginEnd="-65dp"-->
    <!--android:background="@drawable/bg_round" />-->
    <!--</android.support.v4.widget.DrawerLayout>-->

</layout>